--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,22 @@ main {
 h1 {
     font-size: 2em;
     color: #333;
+    margin-top: 30px; /* Espace au-dessus du h2 */
+    margin-bottom: 10px; /* Espace en dessous */
+}
+
+h2 {
+    font-size: 1.5em; /* Taille du h2 */
+    color: #444;      /* Couleur légèrement différente */
+    margin-top: 20px; /* Espace au-dessus du h2 */
+    margin-bottom: 10px; /* Espace en dessous */
+}
+
+h3 {
+    font-size: 1.2em; /* Taille du h3 */
+    color: #555;      /* Couleur légèrement différente */
+    margin-top: 15px; /* Espace au-dessus du h3 */
+    margin-bottom: 5px; /* Espace en dessous */
 }
 
 .formatted-text {
@@ -72,5 +88,19 @@ p {
     font-size: 1.1em;
     line-height: 1.6;
     color: #666;
-    max-width: 800px; /* Largeur maximale du texte */
+    max-width: 1000px; /* Largeur maximale du texte */
+}
+
+
+/* Styles pour le footer */
+footer {
+    background-color: #f4f4f4; /* Couleur de fond */
+    text-align: center; /* Centre le texte */
+    padding: 10px 0; /* Espacement vertical */
+    position: relative; /* Position par rapport au contenu principal */
+}
+
+footer p {
+    margin: 0; /* Enlève la marge par défaut */
+    color: #666; /* Couleur du texte */
 }
