--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ nav a {
     font-size: 1.2em;
     padding: 15px;
     width: 100%;
-    text-align: center;
+    text-align: left;
     transition: background-color 0.3s ease;
 }
 
