--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -2,12 +2,17 @@
 
 /* Media Query pour les petits écrans (mobile) */
 @media (max-width: 768px) {
-    header {
-        height: auto; /* Laissez le header s'adapter au contenu */
+
+    footer {
+        flex-direction: column; /* Aligne les éléments verticalement */
+        position: relative; /* Supprime la position absolue pour centrer */
+        align-items: center; /* Centre les éléments */
     }
 
-    .nav-links {
-        flex-direction: column; /* Changez l'orientation des liens en colonne */
-        align-items: center; /* Centre les liens sous le logo */
+    .footer-link {
+        position: static; /* Supprime la position absolue */
+        margin-right: 0; /* Enlève la marge à droite */
+        margin-top: 10px; /* Ajoute une marge au-dessus pour espacer du texte du footer */
     }
+    
 }
