--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -44,7 +44,7 @@
 
     .entry {
         flex-direction: column; /* Sur mobile, empile les éléments */
-        align-items: center; /* Centre les éléments horizontalement */
+        align-items: center; 
     }
 
     .modern-description {
