--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,39 @@ main {
     padding-bottom: 50px; /* Évite que le contenu principal chevauche le footer */
 }
 
+
+/* CSS */
+.button-63 {
+    align-items: center;
+    background-image: linear-gradient(90deg, rgba(237,190,24,1) 0%, rgba(237,141,24,1) 47%, rgba(224,114,0,1) 100%);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 19px 24px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    margin: 0 auto;
+    margin-top:30px;
+}
+
+.button-63:active,
+.button-63:hover {
+    outline: 0;
+}
+
 footer {
     background-color: #333;
     color: white;
