--- a/css/style.css
+++ b/css/style.css
@@ -378,13 +378,13 @@ button.edit-btn, button.edit-user-btn {
 }
 
 /* Couleur pour le bouton Supprimer */
-button.delete-btn, button.delete-user-btn {
+button.delete-btn, button.delete-user-btn, button.delete-message-btn {
     background-color: #f44336; /* Rouge */
     color: white;
 }
 
 /* Ajouter une transition pour un effet de survol */
-button.edit-btn:hover, button.delete-btn:hover {
+button.edit-btn:hover, button.delete-btn:hover, button.delete-message-btn {
     opacity: 0.8; /* Effet de survol */
 }
 
